# imgui-rs

./: .gitignore  Cargo.toml  build.rs
examples/: dx11_renderer.rs  example_win32_directx11.rs  win32_window.rs
libcimgui/: CMakeLists.txt
libcimgui/cmake/: FindDX11.cmake  FindWindowsKits.cmake
libcimgui/dear_bindings-backend_conversion/src/templates/: imgui_impl_vulkan-header-template.cpp
libcimgui/generator_output/: cimgui.cpp  cimgui.h  cimgui.json  cimgui_impl_dx11.cpp  cimgui_impl_dx11.h  cimgui_impl_dx11.json  cimgui_impl_win32.cpp  cimgui_impl_win32.h  cimgui_impl_win32.json
src/: imgui_bindings.rs  imgui_impl_dx11_bindings.rs  imgui_impl_win32_bindings.rs  lib.rs
